# day12_ha-tang-cloud_va_deployment-stardust-zip

./: .envrc  .gitignore  CODE_LAB.md  pyproject.toml  shell.nix  student-guide.md
02-docker/production/: docker-compose.yml
03-cloud-deployment/render/: render.yaml
04-api-gateway/production/: cost_guard_redis.py  main.py  rate_limiter_redis.py
06-lab-complete/: DEPLOYMENT.md  MISSION_ANSWERS.md
06-lab-complete/app/: __init__.py  auth.py  cost_guard.py  rate_limiter.py
