[project]
name = "day12-agent-deployment"
version = "0.1.0"
description = "Day 12 Lab - Deploying AI Agents to Cloud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi==0.115.0",
	"uvicorn[standard]==0.30.0",
	"psutil==6.0.0",
	"python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "basedpyright",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.uv]
managed = true

[tool.pre-commit]
min_version = "3.0"
